# e-pi-lepsy

./: .gitignore  README.md  justfile  openapi.yml  package-lock.json  package.json
api/: app.py  config.py  models.py  pyproject.toml
api/api/: __init__.py  household.py  pet.py
api/migrations/versions/: dabd6b1bb1ff_init_db.py
app/: layout.tsx
backend/: app.py  config.py  init_db.py  models.py  openapi.yml  requirements.txt  run.py
backend/api/: household.py  pet.py
backend/api/pet/: __init__.py  seizure.py
backend/migrations/: env.py
backend/migrations/versions/: 23a4ebe43ed5_add_avatar_to_pet.py  c00f3ae959a6_fixed_updated_at_in_models.py  fddf61f696c5_fixed_referenced_fk_constraints_id_.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/Buttons/: index.tsx
frontend/components/Calendar/: Calendar.module.css  index.tsx
frontend/components/CalendarEvent/: index.tsx
frontend/components/Form/: index.tsx
scripts/: init_db.sh
src/: App.tsx
