[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["ejmg <elias.jm.garcia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
flask-marshmallow = {extras = ["sqlalchemy"], version = "^0.15.0"}
flask-migrate = "^4.0.4"
psycopg = {extras = ["binary"], version = "^3.1.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
